; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_linker.c__bfd_generic_link_hash_newfunc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_linker.c__bfd_generic_link_hash_newfunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfd_hash_entry = type { i32 }
%struct.bfd_hash_table = type { i32 }
%struct.generic_link_hash_entry = type { i32*, i32 }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bfd_hash_entry* @_bfd_generic_link_hash_newfunc(%struct.bfd_hash_entry* %0, %struct.bfd_hash_table* %1, i8* %2) #0 {
  %4 = alloca %struct.bfd_hash_entry*, align 8
  %5 = alloca %struct.bfd_hash_entry*, align 8
  %6 = alloca %struct.bfd_hash_table*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.generic_link_hash_entry*, align 8
  store %struct.bfd_hash_entry* %0, %struct.bfd_hash_entry** %5, align 8
  store %struct.bfd_hash_table* %1, %struct.bfd_hash_table** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  %10 = icmp eq %struct.bfd_hash_entry* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %3
  %12 = load %struct.bfd_hash_table*, %struct.bfd_hash_table** %6, align 8
  %13 = call %struct.bfd_hash_entry* @bfd_hash_allocate(%struct.bfd_hash_table* %12, i32 16)
  store %struct.bfd_hash_entry* %13, %struct.bfd_hash_entry** %5, align 8
  %14 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  %15 = icmp eq %struct.bfd_hash_entry* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  store %struct.bfd_hash_entry* %17, %struct.bfd_hash_entry** %4, align 8
  br label %36

18:                                               ; preds = %11
  br label %19

19:                                               ; preds = %18, %3
  %20 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  %21 = load %struct.bfd_hash_table*, %struct.bfd_hash_table** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = call %struct.bfd_hash_entry* @_bfd_link_hash_newfunc(%struct.bfd_hash_entry* %20, %struct.bfd_hash_table* %21, i8* %22)
  store %struct.bfd_hash_entry* %23, %struct.bfd_hash_entry** %5, align 8
  %24 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  %25 = icmp ne %struct.bfd_hash_entry* %24, null
  br i1 %25, label %26, label %34

26:                                               ; preds = %19
  %27 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  %28 = bitcast %struct.bfd_hash_entry* %27 to %struct.generic_link_hash_entry*
  store %struct.generic_link_hash_entry* %28, %struct.generic_link_hash_entry** %8, align 8
  %29 = load i32, i32* @FALSE, align 4
  %30 = load %struct.generic_link_hash_entry*, %struct.generic_link_hash_entry** %8, align 8
  %31 = getelementptr inbounds %struct.generic_link_hash_entry, %struct.generic_link_hash_entry* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 8
  %32 = load %struct.generic_link_hash_entry*, %struct.generic_link_hash_entry** %8, align 8
  %33 = getelementptr inbounds %struct.generic_link_hash_entry, %struct.generic_link_hash_entry* %32, i32 0, i32 0
  store i32* null, i32** %33, align 8
  br label %34

34:                                               ; preds = %26, %19
  %35 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %5, align 8
  store %struct.bfd_hash_entry* %35, %struct.bfd_hash_entry** %4, align 8
  br label %36

36:                                               ; preds = %34, %16
  %37 = load %struct.bfd_hash_entry*, %struct.bfd_hash_entry** %4, align 8
  ret %struct.bfd_hash_entry* %37
}

declare dso_local %struct.bfd_hash_entry* @bfd_hash_allocate(%struct.bfd_hash_table*, i32) #1

declare dso_local %struct.bfd_hash_entry* @_bfd_link_hash_newfunc(%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
